styles/globals.css
@import "tailwindcss";
@config "../tailwind.config.ts";

@source inline(
  "{bg,text,border,ring,stroke,fill}-{slate,gray,zinc,neutral,stone,red,orange,amber,yellow,lime,green,emerald,teal,cyan,sky,blue,indigo,violet,purple,fuchsia,pink,rose}-{50,100,200,300,400,500,600,700,800,900,950}"
);
@source inline(
  "hover:{bg,text,border}-{slate,gray,zinc,neutral,stone,red,orange,amber,yellow,lime,green,emerald,teal,cyan,sky,blue,indigo,violet,purple,fuchsia,pink,rose}-{50,100,200,300,400,500,600,700,800,900,950}"
);

:root {
  --foreground-rgb: 33, 33, 33;
  --background-start-rgb: 232, 232, 232;
  --background-end-rgb: 232, 232, 232;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 232, 232, 232;
    --background-start-rgb: 33, 33, 33;
    --background-end-rgb: 33, 33, 33;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

/* Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 7px;
}

*::-webkit-scrollbar-track {
  border-radius: 5px;
}

*::-webkit-scrollbar-thumb {
  border-radius: 2px;
  border: 1px solid;
  background-color: #686868;
}

html {
  height: 100%;
  overflow: hidden;
  position: relative;
}

body {
  height: 100%;
  overflow: auto;
  position: relative;
}

.text-xxs {
  font-size: 0.63rem; /* Example of a smaller font size than text-xs */
}

.break-words-all {
  word-break: break-all;
  word-wrap: break-word;
  overflow-wrap: break-word;
}

body.sf-active [data-main-nav] {
  display: none !important;
}

